[tool.poetry]
name = "torchapprox"
version = "0.1.0"
description = "GPU-accelerated Neural Network layers using Approximate Multiplication for PyTorch"
authors = ["Elias Trommer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
max-line-length = 120
ignore = 'docs'
