[tool.poetry]
name = "torchapprox"
version = "0.2.0"
description = "GPU-accelerated Neural Network layers using Approximate Multiplication for PyTorch"
authors = ["Elias Trommer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-benchmark = "^4.0.0"
pytest-cov = "^3.0.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
ipykernel = "^6.25.1"
torchviz = "^0.0.2"
numpy = "^1.23.0"
torchvision = "0.15.1"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
mkdocs = "^1.5.3"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch torchaudio torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
